<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/homeactivitycoordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:visibility="visible">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar_nav"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name" />

        <RelativeLayout
            android:id="@+id/homeActivityOption"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/search_bar_home_activity"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:text="@string/search_beer"
                android:padding="4dp"
                android:textColor="@android:color/darker_gray"
                android:layout_marginStart="24dp"
                android:background="@drawable/search_background"
                android:layout_centerVertical="true"/>

            <ImageButton
                android:id="@+id/shopping_cart"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/shopping_cart"
                android:src="@drawable/ic_shopping_cart"
                android:layout_width="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

      <android.support.v7.widget.RecyclerView
          android:id="@+id/home_activity_recycler_view"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:scrollbars="vertical"
          android:background="@color/off_white"
          android:focusableInTouchMode="true"
          android:layout_marginTop="4dp">

      </android.support.v7.widget.RecyclerView>

      <TextView
          android:id="@+id/no_internet"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/no_internet_view"
          android:visibility="gone"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"/>

      <include
          android:id="@+id/progress_bar1"
          layout="@layout/progress_bar"/>

  </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>
</layout>